Adding "select all statuses" button for issue search page
Also refactoring sniff function to more reliably not fire functions twice

--- a/_includes/greasemonkey/jira-helper/jira-helper.css
+++ b/_includes/greasemonkey/jira-helper/jira-helper.css
@@ -468,6 +468,18 @@
 }
 
   /* //////////////////////////
+ // Select All Statuses
+////////////////////////// */
+
+#select_all_statuses_wrapper {
+  margin-top: 5px;
+}
+
+#select_all_statuses_wrapper + #issue-filter {
+  margin-top: 0;
+}
+
+  /* //////////////////////////
  // Re-order ticket sections
 ////////////////////////// */
 
