Turning off arrows for now

--- a/_includes/greasemonkey/jira-helper/jira-helper.css
+++ b/_includes/greasemonkey/jira-helper/jira-helper.css
@@ -369,10 +369,11 @@
  // Open external links in new tab
 ////////////////////////// */
 
-.jira-helper-external-links a[href]:not([href^="https://ziprecruiter.atlassian.net/"]):not([href^="/"]):not([href^="#"]):after {
+/* Maybe not necessary */
+/* .jira-helper-external-links a[href]:not([href^="https://ziprecruiter.atlassian.net/"]):not([href^="/"]):not([href^="#"]):after {
   font-family: apple color emoji,segoe ui emoji,noto color emoji,android emoji,emojisymbols,emojione mozilla,twemoji mozilla,segoe ui symbol;
   content: "↗️";
-}
+} */
 
   /* //////////////////////////
  // Re-order Statuses
