--- a/_includes/greasemonkey/jira-helper/jira-helper.css
+++ b/_includes/greasemonkey/jira-helper/jira-helper.css
@@ -312,8 +312,21 @@
 
 
   /* //////////////////////////
- // Reverse Sort Order (new JIRA ticket view)
+ // Reverse Comment Order (new JIRA ticket view)
 ////////////////////////// */
+
+.jira-helper-reverse-comments [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > span {
+  display: flex;
+  flex-direction: column;
+}
+
+.jira-helper-reverse-comments [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > span > * {
+  order: 3;
+}
+
+.jira-helper-reverse-comments [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > span > *:first-child {
+  order: 4;
+}
 
 .jira-helper-reverse-comments [data-test-id="issue.activity.comments-list"] {
   display: flex;
@@ -324,13 +337,18 @@
   /* //////////////////////////
  // Add Comment On Top
 ////////////////////////// */
-
 /* New Issue View */
-.jira-helper-add-comment-on-top [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-of-type(4) > div:nth-of-type(3),
-.jira-helper-add-comment-on-top [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(4) > span:nth-child(3)  {
+.jira-helper-add-comment-on-top [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > span {
   display: flex;
-  flex-direction: column-reverse;
-  /* margin-top: 24px; */
+  flex-direction: column;
+}
+
+.jira-helper-add-comment-on-top [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > span > * {
+  order: 3;
+}
+
+.jira-helper-add-comment-on-top [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > span > span {
+  order: 1;
 }
 
 /* Old */
@@ -379,7 +397,7 @@
  // Re-order Statuses
 ////////////////////////// */
 
-.jira-helper-re-order-statuses [data-test-id="issue.views.issue-base.foundation.status.status-field-wrapper"] > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(1) {
+.jira-helper-re-order-statuses [data-test-id="issue.views.issue-base.foundation.status.status-field-wrapper"] > div > div:nth-of-type(2) > div:nth-of-type(1) > div:nth-of-type(2) > div:nth-of-type(1) {
   display: flex;
   flex-direction: column;
 }
@@ -389,11 +407,11 @@
   order: 100;
 }
 
-[data-status="Backlog"] {
+[data-status="New"] {
   order: 101;
 }
 
-[data-status="Paused"] {
+[data-status="Backlog"] {
   order: 102;
 }
 
@@ -408,6 +426,10 @@
 /* In progress */
 [data-status-section="2"] {
   order: 200;
+}
+
+[data-status="Blocked"] {
+  order: 202;
 }
 
 [data-status="Work in Progress"] {
@@ -426,13 +448,6 @@
   order: 206;
 }
 
-[data-status="Failed QA"] {
-  order: 207;
-}
-
-[data-status="Ready for Prod"] {
-  order: 208;
-}
 
 [data-status="Released"] {
   order: 209;
