--- a/_includes/greasemonkey/jira-helper/jira-helper.css
+++ b/_includes/greasemonkey/jira-helper/jira-helper.css
@@ -455,6 +455,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  flex-direction: row;
 }
 
 .jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(5) > *,
