Hide web links again

--- a/_includes/greasemonkey/jira-helper/jira-helper.css
+++ b/_includes/greasemonkey/jira-helper/jira-helper.css
@@ -469,19 +469,20 @@
 }
 
 /* Sub Tasks */
-.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(5) > div:nth-child(4),
+/*.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(5) > div:nth-child(4),
 .jira-helper-tame-ticket-links .jira-helper-hook-ticket-subtasks-wrapper[class] {
   width: 48%;
-}
+}*/
 
 /* Linked Issues */
-.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(5) > div:nth-child(6),
+/*.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(5) > div:nth-child(6),
 .jira-helper-tame-ticket-links .jira-helper-hook-ticket-linkedissues-wrapper[class] {
   width: 48%;
-}
+}*/
+/* Not doing the above anymore since we are focusing on epics and child tickets more */
 
 /* Web Links */
-.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(5) > div:nth-child(8),
+.jira-helper-tame-ticket-links [data-test-id="issue.views.issue-details.issue-layout.left-most-column"] > div:nth-child(5) > div:nth-child(7),
 .jira-helper-tame-ticket-links .jira-helper-hook-ticket-weblinks-wrapper {
   /*outline: 2px dashed blue;*/
   display: none;
