Adding 'Hide "Automation" field' feature
Since it's not built into JIRA, lol.

--- a/_includes/greasemonkey/jira-helper/jira-helper.css
+++ b/_includes/greasemonkey/jira-helper/jira-helper.css
@@ -480,6 +480,14 @@
 }
 
   /* //////////////////////////
+ // Hide "Automation" field
+////////////////////////// */
+
+.jira-helper-hide-automation-field [data-test-id="issue.views.issue-base.context.ecosystem-glance-panel"] {
+  display: none !important;
+}
+
+  /* //////////////////////////
  // Re-order ticket sections
 ////////////////////////// */
 
